Change frontpage copy

--- a/source/layouts/_footer.slim
+++ b/source/layouts/_footer.slim
@@ -3,10 +3,9 @@
 
   markdown:
     We are looking for sustainable sponsorship. If your company is relying
-    on rom-rb or simply want to see rom-rb evolve faster to meet your requirements,
-    please consider backing the project through [our campaign on
-    opencollective.com/rom](https://opencollective.com/rom).
-
+    on async-std or simply want to see async-std evolve faster to meet your requirements,
+    please consider backing the project through [Ferrous Systems](https://ferrous-systems.com),
+    other options may come soon.
 .footer__fine-print
   .footer__fine-print__copyright
     small
@@ -14,7 +13,7 @@
       => design_by
       = logo_by
   .footer__fine-print__social
-    = link_to 'https://github.com/rom-rb/rom', class: 'footer__fine-print__social__icon'
+    = link_to 'https://github.com/async-std/async-std', class: 'footer__fine-print__social__icon'
       span.fa.fa-github-alt
-    = link_to 'https://twitter.com/rom_rb', class: 'footer__fine-print__social__icon--last'
+    = link_to 'https://twitter.com/async-std', class: 'footer__fine-print__social__icon--last'
       span.fa.fa-twitter
