--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -3,11 +3,12 @@
     = image_tag 'logo--hero.svg', class: 'hero__logo__image'
 
   p.hero__intro
-    span.hero__intro__name> Ruby Object Mapper
-    | is an open-source persistence and mapping toolkit for
-    =<> link_to 'Ruby', 'https://ruby-lang.org'
-    | built for speed and simplicity.
+    span.hero__intro__name> async-std
+    | makes async programming easy and approachable. 
+    | Built in
+    =<> link_to 'Rust', 'https://rust-lang.org'
+    | for speed and safety
 
   ul.hero__buttons.inline-buttons--stacked
     li.inline-buttons--stacked__button= link_to 'Learn More', "/#{ version }/learn", class: 'button button--full button--large'
-    li.inline-buttons--stacked__button--last= link_to 'Support rom-rb', '/contribute', class: 'button--secondary button--full button--large'
+    li.inline-buttons--stacked__button--last= link_to 'Support async-std', '/contribute', class: 'button--secondary button--full button--large'
