Remove old blog posts and blurb

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -4,10 +4,10 @@
 
   p.hero__intro
     span.hero__intro__name> async-std
-    | makes async programming easy and approachable. 
+    | makes async programming foundations easy and approachable. 
     | Built in
     =<> link_to 'Rust', 'https://rust-lang.org'
-    | for speed and safety
+    | for speed and safety/
 
   ul.hero__buttons.inline-buttons--stacked
     li.inline-buttons--stacked__button= link_to 'Learn More', "/#{ version }/learn", class: 'button button--full button--large'
