--- a/source/layouts/_meta.slim
+++ b/source/layouts/_meta.slim
@@ -1,5 +1,6 @@
 meta[name="twitter:card" content="summary"]
-meta[name="twitter:site" content="@rom_rb"]
+// TODO: check twitter account
+meta[name="twitter:site" content="@async_std"]
 meta[name="og:url" content=og_url]
 meta[name="og:title" content=head_title]
 meta[name="og:image" content=og_image]
