Fix status page

--- a/source/status.html.slim
+++ b/source/status.html.slim
@@ -23,7 +23,7 @@ table
         td
           a href=project.github_url = project
         td
-          a href=project.rubygems_url
+          a href=project.docsrs_url
             img src=project.version_badge
         td
           a href="https://github.com/async-std/#{project}"
