--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -7,8 +7,8 @@
     | makes async programming foundations easy and approachable. 
     | Built in
     =<> link_to 'Rust', 'https://rust-lang.org'
-    | for speed and safety/
+    | for speed and safety!
 
   ul.hero__buttons.inline-buttons--stacked
-    li.inline-buttons--stacked__button= link_to 'Learn More', "/#{ version }/learn", class: 'button button--full button--large'
+    li.inline-buttons--stacked__button= link_to 'Learn More', "/learn", class: 'button button--full button--large'
     li.inline-buttons--stacked__button--last= link_to 'Support async-std', '/contribute', class: 'button--secondary button--full button--large'
