--- a/source/learn.html.slim
+++ b/source/learn.html.slim
@@ -2,4 +2,4 @@
 title: Async programming with Rust and async-std
 ---
 
-iframe src="https://doc.rust-lang.org/stable/rust-by-example/" width="100%" height="900"
+iframe src="https://book.async.rs" width="100%" height="900"
