Remove last parts of ROM

--- a/source/layouts/_footer.slim
+++ b/source/layouts/_footer.slim
@@ -13,7 +13,7 @@
       => design_by
       = logo_by
   .footer__fine-print__social
-    = link_to 'https://github.com/async-std/async-std', class: 'footer__fine-print__social__icon'
+    = link_to 'https://github.com/async-std/', class: 'footer__fine-print__social__icon'
       span.fa.fa-github-alt
-    = link_to 'https://twitter.com/async-std', class: 'footer__fine-print__social__icon--last'
+    = link_to 'https://twitter.com/asyncrust', class: 'footer__fine-print__social__icon--last'
       span.fa.fa-twitter
