Link directly to the book

--- a/source/layouts/_header.slim
+++ b/source/layouts/_header.slim
@@ -5,7 +5,7 @@ header.header
   #navigation__items.header__menu
     nav.menu
       ul.menu__items
-        li.menu__item= nav_link_to 'Learn', "/learn", class: 'menu__item__link'
+        li.menu__item= nav_link_to 'Learn', "https://book.async.rs", class: 'menu__item__link'
         li.menu__item= nav_link_to 'API', '/api', class: 'menu__item__link'
         li.menu__item= nav_link_to 'Blog', '/blog', class: 'menu__item__link'
         li.menu__item= nav_link_to 'Contribute', '/contribute', class: 'menu__item__link'
