Change main color

--- a/assets/stylesheets/_config/_flask.scss
+++ b/assets/stylesheets/_config/_flask.scss
@@ -2,7 +2,7 @@
 $flask-color-base-white: #fff !default;
 $flask-color-base-black: #333 !default;
 $flask-color-base-beige: #f7f5f3 !default;
-$flask-color-base-purple: #a10d87 !default;
+$flask-color-base-purple: #9254a8 !default;
 $flask-color-base-red: #dc002e !default;
 $flask-color-base-blue: #169adb !default;
 
