--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -8,7 +8,10 @@
     | Built in
     =<> link_to 'Rust', 'https://rust-lang.org'
     | for speed and safety!
+    | Read our
+    =<> link_to 'Announcement', 'https://book.async.rs'
+    | here.
 
   ul.hero__buttons.inline-buttons--stacked
-    li.inline-buttons--stacked__button= link_to 'Learn More', "/learn", class: 'button button--full button--large'
-    li.inline-buttons--stacked__button--last= link_to 'Support async-std', '/contribute', class: 'button--secondary button--full button--large'
+    li.inline-buttons--stacked__button= link_to 'Learn More', "https://book.async.rs", class: 'button button--full button--large'
+    li.inline-buttons--stacked__button--last= link_to 'Contribute to async-std', '/contribute', class: 'button--secondary button--full button--large'
