Add chat header

--- a/source/layouts/_header.slim
+++ b/source/layouts/_header.slim
@@ -9,8 +9,7 @@ header.header
         li.menu__item= nav_link_to 'API', '/api', class: 'menu__item__link'
         li.menu__item= nav_link_to 'Blog', '/blog', class: 'menu__item__link'
         li.menu__item= nav_link_to 'Contribute', '/contribute', class: 'menu__item__link'
-        // TODO: Renable "Discuss"
-        //li.menu__item= nav_link_to 'Discuss', 'https://discourse.rom-rb.org', class: 'menu__item__link'
+        li.menu__item= nav_link_to 'Chat', 'https://discord.gg/JvZeVNe', class: 'menu__item__link'
         li.menu__item= nav_link_to 'Status', '/status', class: 'menu__item__link'
         // TODO: Setup Donation options
         //li.menu__item--last= nav_link_to 'Donate', 'https://opencollective.com/rom', class: 'menu__item__link'
