Add GitHub header and async-tls project

--- a/source/layouts/_header.slim
+++ b/source/layouts/_header.slim
@@ -11,5 +11,6 @@ header.header
         li.menu__item= nav_link_to 'Contribute', '/contribute', class: 'menu__item__link'
         li.menu__item= nav_link_to 'Chat', 'https://discord.gg/JvZeVNe', class: 'menu__item__link'
         li.menu__item= nav_link_to 'Status', '/status', class: 'menu__item__link'
+        li.menu__item= nav_link_to 'GitHub', 'https://github.com/async-std', class: 'menu__item__link'
         // TODO: Setup Donation options
         //li.menu__item--last= nav_link_to 'Donate', 'https://opencollective.com/rom', class: 'menu__item__link'
