Fix front page layout

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -4,11 +4,9 @@
 
   p.hero__intro
     span.hero__intro__name> async-std
-    | makes async programming foundations easy and approachable. 
-    | Built in
+    | makes async programming foundations easy and approachable. Built in
     =<> link_to 'Rust', 'https://rust-lang.org'
-    | for speed and safety!
-    | Read our
+    | for speed and safety! Read our
     =<> link_to 'Announcement', 'https://book.async.rs'
     | here.
 
