--- a/source/layouts/_footer.slim
+++ b/source/layouts/_footer.slim
@@ -3,9 +3,9 @@
 
   markdown:
     We are looking for sustainable sponsorship. If your company is relying
-    on async-std or simply want to see async-std evolve faster to meet your requirements,
+    on async-std or simply wants to see async-std evolve faster to meet your requirements,
     please consider backing the project through [Ferrous Systems](https://ferrous-systems.com),
-    other options may come soon.
+    other funding options may come soon.
 .footer__fine-print
   .footer__fine-print__copyright
     small
