Fix links for the github org. and website

--- a/source/status.html.slim
+++ b/source/status.html.slim
@@ -26,6 +26,6 @@ table
           a href=project.crates_io_url
             img src=project.version_badge
         td
-          a href="https://github.com/async-std/#{project}"
+          a href="https://github.com/async-rs/#{project}"
             img src=project.ci_badge
 
