Linke to our announcement

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -7,7 +7,7 @@
     | makes async programming foundations easy and approachable. Built in
     =<> link_to 'Rust', 'https://rust-lang.org'
     | for speed and safety! Read our
-    =<> link_to 'Announcement', 'https://async.rs/blog'
+    =<> link_to 'Announcement', 'https://async.rs/blog/announcing-async-std/'
     | here.
 
   ul.hero__buttons.inline-buttons--stacked
