Fix twitter footer

--- a/source/layouts/_footer.slim
+++ b/source/layouts/_footer.slim
@@ -15,5 +15,5 @@
   .footer__fine-print__social
     = link_to 'https://github.com/async-rs/', class: 'footer__fine-print__social__icon'
       span.fa.fa-github-alt
-    = link_to 'https://twitter.com/asyncrust', class: 'footer__fine-print__social__icon--last'
+    = link_to 'https://twitter.com/asyncrs', class: 'footer__fine-print__social__icon--last'
       span.fa.fa-twitter
