--- a/source/layouts/_footer.slim
+++ b/source/layouts/_footer.slim
@@ -4,8 +4,7 @@
   markdown:
     We are looking for sustainable sponsorship. If your company is relying
     on async-std or simply wants to see async-std evolve faster to meet your requirements,
-    please consider backing the project through [Ferrous Systems](https://ferrous-systems.com),
-    other funding options may come soon.
+    please consider backing the project through [OpenCollective](https://opencollective.com/async-rs/) or directly through [Ferrous Systems](https://ferrous-systems.com).
 .footer__fine-print
   .footer__fine-print__copyright
     small
